--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ html {
 body {
   background: var(--color-primary-dark);
   color: var(--color-primary-light);
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
@@ -139,3 +139,5 @@ a.link {
   text-align: var(--text-center);
   letter-spacing: 0.5em;
 }
+
+/* --MAIN-- */
