--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   --color-primary-dark: #17171a;
   --color-primary-gray: rgba(192, 192, 192, 0.913);
   --color-primary-light: #ffffff;
+  --color-game-wood: #8e5412;
+  --color-game-gray: #00000040;
+  --color-game-darkgray: #00000069;
   --upper: uppercase;
   --text-center: center;
 }
@@ -62,6 +65,14 @@ h1 {
   letter-spacing: 0.12em;
 }
 
+h3 {
+  color: var(--color-primary-gray);
+  text-align: center;
+  font-size: 40px;
+  font-weight: 600;
+  letter-spacing: 0.12em;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -110,11 +121,11 @@ a.link {
   color: var(--color-primary-gray);
 }
 
-.wrapper {
+.section {
   width: 100%;
   max-width: 1288px;
   margin: 0 auto;
-  padding: 0 24px;
+  margin-bottom: 60px;
 }
 
 .text-uppercase {
@@ -158,13 +169,147 @@ a.link {
 
 .header__burger {
   display: block;
+  margin-right: 30px;
 }
 
 /* --MAIN-- */
+/* --About section-- */
 .about-section {
   padding: 50px 0;
 }
 
+.img {
+  width: 100%;
+}
+
 .about-section__text {
   color: var(--color-primary-gray);
+}
+
+/* --Service section-- */
+.service-section {
+  padding-bottom: 60px;
+}
+
+/* --Portfolio section-- */
+.portfolio-section {
+  padding-bottom: 60px;
+}
+/*  --Projects--  */
+.tic-tac-toe__main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 100px;
+  width: 100%;
+  height: 100%;
+  color: var(--color-primary-dark);
+  background: var(--color-primary-gray);
+  text-align: center;
+}
+
+.title {
+  padding-top: 40px;
+  color: var(--color-primary-dark);
+}
+
+.block-step {
+  padding: 25px;
+}
+
+.tic-tac-toe__text {
+  font-size: 24px;
+}
+
+#next {
+  color: var(--color-game-wood);
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.tic-tac-toe__area {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-around;
+  justify-content: space-evenly;
+  width: 500px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  background: var(--color-game-wood);
+  border-radius: 24px;
+  box-shadow: 3px 5px 1px 1px rgba(0, 0, 0, 0.272);
+}
+
+.tic-tac-toe__area-item {
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  width: 140px;
+  height: 140px;
+  margin: 5px;
+  border-radius: 24px;
+  padding: 8px;
+  background: var(--color-game-gray);
+  box-shadow: 3px 5px 1px 1px rgb(0 0 0 / 47%);
+}
+
+.tic-tac-toe__area-item:hover {
+  background: var(--color-game-darkgray);
+}
+
+.cross {
+  color: var(--color-primary-light);
+  font-size: 38px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.zero {
+  color: var(--color-primary-gray);
+  font-size: 38px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.win {
+  color: lightgreen;
+  background: gold;
+  font-size: 50px;
+  font-weight: 900;
+}
+
+.tic-tac-toe__winner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 24px;
+}
+
+.tic-tac-toe__text-winner {
+  font-size: 25px;
+  margin-bottom: 12px;
+}
+
+#winner {
+  font-size: 24px;
+  color: gold;
+}
+
+.tic-tac-toe__btn {
+  width: 120px;
+  padding: 12px;
+  background: #219847;
+  border: none;
+  border-radius: 12px;
+  color: var(--color-primary-light);
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.tic-tac-toe__btn:hover {
+  background: #33e06a;
 }
