--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,8 @@ a.link {
   background: var(--color-primary-gray);
   border: 1px solid var(--color-secondary-gray);
   border-radius: 4px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .form-button:hover {
