--- a/css/style.css
+++ b/css/style.css
@@ -132,8 +132,7 @@ a.link {
   text-transform: uppercase;
 }
 
-.social-links {
-  color: var(--color-primary-gray);
+.social-icons {
   font-size: 32px;
 }
 
