--- a/css/style.css
+++ b/css/style.css
@@ -57,22 +57,6 @@ p {
   margin-top: 0;
 }
 
-h1 {
-  margin: 0;
-  text-align: center;
-  font-size: 72px;
-  font-weight: 600;
-  letter-spacing: 0.12em;
-}
-
-h3 {
-  color: var(--color-primary-gray);
-  text-align: center;
-  font-size: 40px;
-  font-weight: 600;
-  letter-spacing: 0.12em;
-}
-
 ul {
   list-style-type: none;
   margin: 0;
@@ -96,6 +80,22 @@ body {
   font-weight: 400;
   line-height: 1.5;
   margin: 0;
+}
+
+h1 {
+  margin: 0;
+  text-align: center;
+  font-size: 72px;
+  font-weight: 600;
+  letter-spacing: 0.12em;
+}
+
+h3 {
+  color: var(--color-primary-gray);
+  text-align: center;
+  font-size: 40px;
+  font-weight: 600;
+  letter-spacing: 0.12em;
 }
 
 a,
@@ -137,6 +137,7 @@ a.link {
 }
 
 /* --HEADER-- */
+
 .header {
   width: 100%;
   padding-top: 32px;
@@ -174,6 +175,48 @@ a.link {
 .header__burger {
   display: block;
   margin-right: 30px;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-primary-dark);
+  transform: translateX(100%);
+  transition: transform 0.3s;
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+
+.mobile-menu__btn-close {
+  position: absolute;
+  top: 40px;
+  right: 20px;
+}
+
+.mobile-title {
+  margin: 40px 40px 50px;
+  font-size: 32px;
+}
+
+.mobile-list {
+  margin: 0 40px 50px;
+  font-size: 24px;
+}
+
+.mobile__menu-link {
+  margin-bottom: 20px;
+  color: var(--color-primary-light);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mobile__menu-link:hover {
+  color: var(--color-primary-gray);
 }
 
 /* --MAIN-- */
