--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ ul {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 address {
   font-style: normal;
 }
@@ -81,12 +85,16 @@ body {
   line-height: 1.5;
   margin: 0;
 }
-
+h1,
+h2 {
+  line-height: 1.5;
+}
 h1 {
   margin: 0;
   text-align: center;
   font-size: 72px;
   font-weight: 600;
+  line-height: 1.5;
   letter-spacing: 0.12em;
 }
 
@@ -107,9 +115,8 @@ a {
   display: inline-block;
 }
 
-a.link {
+.link {
   color: var(--color-primary-light);
-  text-decoration: none;
   text-transform: uppercase;
 }
 
@@ -121,6 +128,10 @@ a.link {
   color: var(--color-primary-gray);
 }
 
+.carrent-link {
+  color: var(--color-primary-gray);
+}
+
 .section {
   width: 100%;
   max-width: 1288px;
@@ -128,12 +139,23 @@ a.link {
   margin-bottom: 60px;
 }
 
-.text-uppercase {
-  text-transform: uppercase;
+.social-links a {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50px;
+  color: var(--color-primary-light);
+  font-size: 28px;
+  margin: 20px;
+  padding: 10px 18px;
+  transition: all 200ms ease-in-out;
 }
 
-.social-icons {
-  font-size: 32px;
+.social-links a:hover {
+  background: var(--color-primary-gray);
+  transform: scale(1.2);
+}
+
+header .social-links a {
+  font-size: 20px;
 }
 
 /* --HEADER-- */
@@ -249,8 +271,6 @@ a.link {
   color: var(--color-primary-gray);
 }
 
-.portfolio-section__btn {
-}
 /*  --Projects--  */
 .tic-tac-toe__main {
   display: flex;
